--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </header>
       <main class="main">
-        <div class="row g-3 m-2">
+        <div class="row">
           <div class="col-12" style="padding: 0px">
             <div
               class="card"
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0; margin-top: 1em">
-            <div class="card" style="width: 100%; height: 100%">
+            <div class="card" style="height: 100%; margin-right: 1em">
               <img
                 class="card-img-top"
                 src="..."
@@ -95,7 +95,7 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0px; margin-top: 1em">
-            <div class="card" style="width: 100%; height: 100%">
+            <div class="card" style="height: 100%; margin-right: 1em">
               <img
                 class="card-img-top"
                 src="..."
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0px; margin-top: 1em">
-            <div class="card" style="width: 100%; height: 100%">
+            <div class="card" style="height: 100%; margin-right: 1em">
               <img
                 class="card-img-top"
                 src="..."
@@ -193,7 +193,7 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0px; margin-top: 1em">
-            <div class="card" style="width: 100%; height: 100%">
+            <div class="card" style="height: 100%">
               <img
                 class="card-img-top"
                 src="..."
