--- a/index.html
+++ b/index.html
@@ -46,19 +46,12 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0; margin-top: 1em">
-            <div class="card" style="height: 100%; margin-right: 1em">
+            <div class="card" style="height: 90%; margin-right: 1em">
               <img
                 class="card-img-top"
-                src="..."
+                src="/w8-bootstrap/cart.jpg"
                 alt="500 x 325"
-                style="
-                  background: rgb(187, 185, 185);
-                  width: 100%;
-                  height: 40%;
-                  font-size: 1.5em;
-                  text-align: center;
-                  padding-top: 2em;
-                "
+                style="width: 100%; height: 40%"
               />
               <div
                 class="card-body"
@@ -95,19 +88,12 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0px; margin-top: 1em">
-            <div class="card" style="height: 100%; margin-right: 1em">
+            <div class="card" style="height: 90%; margin-right: 1em">
               <img
                 class="card-img-top"
-                src="..."
+                src="/w8-bootstrap/cart.jpg"
                 alt="500 x 325"
-                style="
-                  background: rgb(187, 185, 185);
-                  width: 100%;
-                  height: 40%;
-                  font-size: 1.5em;
-                  text-align: center;
-                  padding-top: 2em;
-                "
+                style="width: 100%; height: 40%"
               />
               <div
                 class="card-body"
@@ -144,19 +130,12 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0px; margin-top: 1em">
-            <div class="card" style="height: 100%; margin-right: 1em">
+            <div class="card" style="height: 90%; margin-right: 1em">
               <img
                 class="card-img-top"
-                src="..."
+                src="/w8-bootstrap/cart.jpg"
                 alt="500 x 325"
-                style="
-                  background: rgb(187, 185, 185);
-                  width: 100%;
-                  height: 40%;
-                  font-size: 1.5em;
-                  text-align: center;
-                  padding-top: 2em;
-                "
+                style="width: 100%; height: 40%"
               />
               <div
                 class="card-body"
@@ -193,19 +172,12 @@
             </div>
           </div>
           <div class="col-sm-3" style="padding: 0px; margin-top: 1em">
-            <div class="card" style="height: 100%">
+            <div class="card" style="height: 90%">
               <img
                 class="card-img-top"
-                src="..."
+                src="/w8-bootstrap/cart.jpg"
                 alt="500 x 325"
-                style="
-                  background: rgb(187, 185, 185);
-                  width: 100%;
-                  height: 40%;
-                  font-size: 1.5em;
-                  text-align: center;
-                  padding-top: 2em;
-                "
+                style="width: 100%; height: 40%"
               />
               <div
                 class="card-body"
